--- a/Intent Data Collector.ipynb
+++ b/Intent Data Collector.ipynb
@@ -1016,12 +1016,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "faa7c6d3576dadeb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-08T09:04:08.453757Z",
-     "start_time": "2024-05-08T08:36:50.796256Z"
+     "end_time": "2025-01-07T09:26:37.134810Z",
+     "start_time": "2025-01-07T03:57:08.296826Z"
     }
    },
    "outputs": [
@@ -1029,7 +1029,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-08 16:36:58.604 python[67138:2568048] TSM AdjustCapsLockLEDForKeyTransitionHandling - _ISSetPhysicalKeyboardCapsLockLED Inhibit\n"
+      "2025-01-07 11:57:08.433 python[75959:3987021] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2025-01-07 11:57:08.433 python[75959:3987021] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2025-01-07 11:57:08.433 python[75959:3987021] Text input context does not respond to _valueForTIProperty:\n",
+      "2025-01-07 11:57:08.437 python[75959:3987021] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2025-01-07 11:57:08.437 python[75959:3987021] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2025-01-07 11:57:08.437 python[75959:3987021] Text input context does not respond to _valueForTIProperty:\n",
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -1214,11 +1222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1a277dbf32e8cc4b",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-07T03:56:55.658683Z",
+     "start_time": "2025-01-07T03:56:55.645848Z"
+    }
+   },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "eb024a2c84563140"
   }
  ],
  "metadata": {
