--- a/SentenceComparator.ipynb
+++ b/SentenceComparator.ipynb
@@ -1812,12 +1812,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a6e7fcbd5b4b623e",
    "metadata": {
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2025-01-06T09:06:06.452839Z",
-     "start_time": "2025-01-06T02:13:38.190283Z"
+     "start_time": "2025-01-08T02:06:09.746267Z"
     }
    },
    "outputs": [
@@ -1825,345 +1825,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Server running on port 8000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/johnny/anaconda3/lib/python3.10/site-packages/torch/_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
-      "  return self.fget.__get__(instance, owner)()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Server running on port 8000\n",
       "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:36:00] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:37:15] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:43:59] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Selected Response: Ready to start the show?\n",
-      "Input sentence: what do you want to see\n",
-      "Most tag: REST\n",
-      "Most similar response: Rest up.\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.3206]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:19] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:20] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Selected Response: What will we be doing?\n",
-      "Input sentence: what do you want to see\n",
-      "Most tag: REST\n",
-      "Most similar response: Rest up.\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.3149]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:30] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:32] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Selected Response: Shall we begin the show?\n",
-      "Input sentence: what do you want to see\n",
-      "Most tag: REST\n",
-      "Most similar response: Rest up.\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.3258]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:35] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:37] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Selected Response: Ready to start the show?\n",
-      "Input sentence: what do you want to see\n",
-      "Most tag: REST\n",
-      "Most similar response: Rest up.\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.3206]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:39] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:40] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Selected Response: Shall we begin the show?\n",
-      "Input sentence: what do you want to see\n",
-      "Most tag: REST\n",
-      "Most similar response: Rest up.\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.3258]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:42] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:43] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Selected Response: What will we be doing?\n",
-      "Input sentence: what do you want to see\n",
-      "Most tag: REST\n",
-      "Most similar response: Rest up.\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.3149]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:45] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:44:46] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Selected Response: Come on, let’s go!\n",
-      "Input sentence: what do you want to see\n",
-      "Most tag: REST\n",
-      "Most similar response: Rest up.\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.3178]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:45:01] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:45:02] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Selected Response: HI\n",
+      "Selected Response: Hi there!\n",
       "Input sentence: hi\n",
       "Most tag: CALL\n",
       "Most similar response: HI\n",
       "subject response: HOST\n",
-      "similarity: tensor([[1.]])\n"
+      "similarity: tensor([[0.8111]])\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:45:17] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Selected Response: HI\n",
-      "Input sentence: hi\n",
-      "Most tag: CALL\n",
-      "Most similar response: HI\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[1.]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:45:48] \"POST / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [08/Jan/2025 10:07:02] \"POST / HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -2178,14 +1854,322 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [06/Jan/2025 10:46:20] \"POST / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [08/Jan/2025 10:07:03] \"POST / HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C received, shutting down server\n"
+      "1\n",
+      "Selected Response: Hello everyone!\n",
+      "Input sentence: hi\n",
+      "Most tag: CALL\n",
+      "Most similar response: HI\n",
+      "subject response: HOST\n",
+      "similarity: tensor([[0.5826]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:07:39] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:07:40] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: Hello everyone!\n",
+      "Input sentence: hi\n",
+      "Most tag: CALL\n",
+      "Most similar response: HI\n",
+      "subject response: HOST\n",
+      "similarity: tensor([[0.5826]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:07:58] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:07:59] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: Hello!\n",
+      "Input sentence: hi\n",
+      "Most tag: CALL\n",
+      "Most similar response: HI\n",
+      "subject response: HOST\n",
+      "similarity: tensor([[0.6872]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:08:15] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:08:16] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: Hello everyone!\n",
+      "Input sentence: hi\n",
+      "Most tag: CALL\n",
+      "Most similar response: HI\n",
+      "subject response: HOST\n",
+      "similarity: tensor([[0.5826]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:08:29] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:08:30] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: Hi there!\n",
+      "Input sentence: hi\n",
+      "Most tag: CALL\n",
+      "Most similar response: HI\n",
+      "subject response: HOST\n",
+      "similarity: tensor([[0.8111]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:09:01] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: Hello everyone!\n",
+      "Input sentence: hi\n",
+      "Most tag: CALL\n",
+      "Most similar response: HI\n",
+      "subject response: HOST\n",
+      "similarity: tensor([[0.5826]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:13:22] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:16:59] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: 建議立即採取行動，以免貽誤戰機。\n",
+      "Input sentence: 你好\n",
+      "Most tag: PUSH\n",
+      "Most similar response: 時間緊迫，請您儘快決策。\n",
+      "subject response: INNU\n",
+      "similarity: tensor([[0.7866]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:38:12] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: 這件事交給我吧，務必完成。\n",
+      "Input sentence: 你好\n",
+      "Most tag: APPROVE\n",
+      "Most similar response: 明白了，屬下會立刻去辦。\n",
+      "subject response: INNU\n",
+      "similarity: tensor([[0.7303]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:38:14] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: 屬下在此，隨時聽候您的吩咐。\n",
+      "Input sentence: 你好\n",
+      "Most tag: PUSH\n",
+      "Most similar response: 時間緊迫，請您儘快決策。\n",
+      "subject response: INNU\n",
+      "similarity: tensor([[0.7627]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:52:54] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: 放心交給我，這件事一定辦妥。\n",
+      "Input sentence: 你好\n",
+      "Most tag: APPROVE\n",
+      "Most similar response: 明白了，屬下會立刻去辦。\n",
+      "subject response: INNU\n",
+      "similarity: tensor([[0.6898]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 10:52:56] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: 太棒了！繼續加油！\n",
+      "Input sentence: 可歌可泣\n",
+      "Most tag: REWARD\n",
+      "Most similar response: 太棒了！繼續加油！\n",
+      "subject response: HOST\n",
+      "similarity: tensor([[0.8041]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 14:26:49] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Selected Response: 首領啊，這點小事都要找老夫，未免太沒本事了吧？\n",
+      "Input sentence: 其實事實上事實\n",
+      "Most tag: CAL & CALL_BACK\n",
+      "Most similar response: 嘿嘿，還有事嗎？\n",
+      "subject response: HOST\n",
+      "similarity: tensor([[0.8445]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jan/2025 14:27:33] \"POST / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
